# libquant

./: README.md
src/: CMakeLists.txt  libquant.tex
src/binomial/: introduction.tex  one_period.nw  pair.nw  tuple.nw
src/preamble/: noweb.tex  preamble.tex  theorem.tex
